--- a/css/variables.css
+++ b/css/variables.css
@@ -11,6 +11,7 @@
     --mono-font: var(--font-mono);
     --code-font-size: var(--font-size-0);
     --size-content-4: 120ch;
+    --inline-code-color: var(--text-1);
 }
 
 /* Themes */
@@ -147,6 +148,7 @@
     --color-scheme: light;
 }
 
+.theme,
 .navy {
     --bg: hsl(226, 23%, 11%);
     --fg: #bcbdd0;
@@ -164,11 +166,11 @@
 
     --links: #2b79a2;
 
-    --inline-code-color: #c5c8c6;
+    --inline-code-color: var(--text-1);
 
     --theme-popup-bg: #161923;
     --theme-popup-border: #737480;
-    --theme-hover: #282e40;
+    --theme-hover: var(--surface--celestial-blue-7);
 
     --quote-bg: hsl(226, 15%, 17%);
     --quote-border: hsl(226, 15%, 22%);
@@ -253,7 +255,7 @@
 
         --links: #2b79a2;
 
-        --inline-code-color: #c5c8c6;
+        --inline-code-color: var(--text-1);
 
         --theme-popup-bg: #141617;
         --theme-popup-border: #43484d;
